<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
<!--        <variable-->
<!--            name="shoe"-->
<!--            type="com.udacity.shoestore.models.Shoe" />-->
        <variable
            name="viewModel"
            type="com.udacity.shoestore.ShoeListViewModel" />
    </data>
    <!--  Using constraint layout to ensure buttons are constrained
     to the bottom of the screen and that the title is constrained
     to the top of the screen,
     and to chain the input fields in between -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ShoeDetailFragment">

        <!-- TODO: Update blank fragment layout -->
        <TextView
            android:id="@+id/shoe_detail_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/shoe_detail_title_text"
            android:textAlignment="center"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_name_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/shoe_name_label_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_name_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail_title" />

        <EditText
            android:id="@+id/shoe_name_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/shoe_name_edit_hint"
            android:text="@={viewModel.shoe.name}"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_view" />

        <TextView
            android:id="@+id/shoe_company_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/shoe_company_label_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_company_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edit" />

        <EditText
            android:id="@+id/shoe_company_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/shoe_company_edit_hint"
            android:text="@={viewModel.shoe.company}"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_view" />

        <TextView
            android:id="@+id/shoe_size_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/shoe_size_label_text"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_size_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_edit" />

        <EditText
            android:id="@+id/shoe_size_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/shoe_size_edit_hint"
            android:text="@={ `` + viewModel.shoe.size}"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            android:inputType="numberDecimal"
            app:layout_constraintBottom_toTopOf="@+id/shoe_desc_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_view" />

        <TextView
            android:id="@+id/shoe_desc_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/shoe_desc_label_text"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/shoe_desc_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_edit" />

        <EditText
            android:id="@+id/shoe_desc_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:hint="@string/shoe_desc_edit_hint"
            android:text="@={viewModel.shoe.description}"
            android:textAlignment="center"
            android:textSize="@dimen/text_size"
            app:layout_constraintBottom_toTopOf="@+id/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_desc_view" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin"
            android:text="@string/save_button_text"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/cancel_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>